PT#120406365 - More UI fixes: home page banner on small screens and the sticky search bar on the home page when scrolling.

--- a/gulp/scss/_header.scss
+++ b/gulp/scss/_header.scss
@@ -59,8 +59,8 @@ body {
         padding: 15px;
         -webkit-filter: invert(1);
         filter: invert(1);
-        max-height: none;
-        height: 160px;
+        max-width: 23%;
+        max-height: 43%;
       }
 
       .banner-main {
